@@ -2,8 +2,11 @@ package net.technisys.guayagamer.main;
 
 import java.time.Duration;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.Objects;
 
 import net.technisys.guayagamer.constant.Constant;
 import net.technisys.guayagamer.model.Conference;
@@ -15,21 +18,20 @@ public class Main {
 	private String[] inputConferencesString = { "my first nintendo 30min", "game sega cuarto", "sony vega 60min" };
 
 	private static List<Conference> inputConferences = new ArrayList<>();
-	private static List<Conference> usedConferences = new ArrayList<>();
+	// private static List<Conference> usedConferences = new ArrayList<>();
 	private static List<Conference> freeConferences = new ArrayList<>();
 
 	private static LinkedList<Conference> freeConferencesQueue = new LinkedList<>();
-	
+
 	private static List<ConferenceRoom> conferenceRooms;
 
-	public static void main(String[] args) {
+	public static void main(String[] args) throws Exception {
 
-		Main main = new Main();
 		conferenceRooms = new ArrayList<>();
 
 		// calculate rooms needed
 		// TODO completar
-		int conferenceRoomNeeded = 2;
+		int conferenceRoomNeeded = 3;
 		Session session;
 		for (int i = 0; i < conferenceRoomNeeded; i++) {
 			ConferenceRoom conferenceRoom = new ConferenceRoom();
@@ -49,10 +51,11 @@ public class Main {
 
 		// TODO borrar
 		dummyConference();
-		freeConferences = new ArrayList<>(inputConferences);
+		// freeConferences = new ArrayList<>(inputConferences);
+		freeConferencesQueue = new LinkedList<>(inputConferences);
 
 		int contador = 1;
-		while (!freeConferences.isEmpty()) {
+		while (!freeConferencesQueue.isEmpty()) {
 
 			for (ConferenceRoom room : conferenceRooms) {
 				for (Session se : room.getSessions()) {
@@ -68,59 +71,190 @@ public class Main {
 				break;
 		}
 
-		main.conferenceRooms.forEach(c -> c.printConferenceRoom());
+		System.out.println("");
+		System.out.println("***********************");
+		System.out.println("FINAL RESULT:");
+		conferenceRooms.forEach(c -> c.printConferenceRoom());
 
 		System.out.println(" ");
 		System.out.println("Free Conferences ");
 
-		for (Conference c : freeConferences) {
+		for (Conference c : freeConferencesQueue) {
 			c.printConference();
 		}
 	}
 
-	private static void addConferences(Session session) {
+	private static void addConferences(Session session) throws Exception {
 
-		if (!freeConferences.isEmpty()) {
+		if (!freeConferencesQueue.isEmpty()) {
 
-			Conference nextConference = freeConferences.get(0);
+			Conference nextConference = freeConferencesQueue.getFirst();
+			nextConference.attempt += 1;
 
-			if (nextConference.attempt > 5) {
+			if (session.getRemainingMinutes() >= nextConference.getDurationInMinutes()) {
+				session.addConference(nextConference);
+				// usedConferences.add(nextConference);
+				freeConferencesQueue.remove(nextConference);
+			} else {
+				System.out.println("NO puedo ubicar la conferencia " + nextConference.getName() + ": "
+						+ nextConference.getDurationInMinutes() + "min, en session " + session.getName() + ": "
+						+ session.getRemainingMinutes() + "min");
+				// freeConferencesQueue.removeFirst();
+				// freeConferencesQueue.add(nextConference);
+			}
+
+			if (nextConference.attempt > 3) {
 				fixConference(session, nextConference);
 			}
 
-			if (session.getRemainingMinutes() >= nextConference.getDurationInMinutes()) {
-				session.addConference(freeConferences.get(0));
-				usedConferences.add(nextConference);
-				freeConferences.remove(nextConference);
+			if (!session.isCompleteFull() && !freeConferencesQueue.isEmpty()) {
+				addConferences(session);
 			}
-			nextConference.attempt += 1;
 
 		}
 	}
 
-	private static void fixConference(Session session, Conference nextConference) {
-		
-		long diferencia = nextConference.getDurationInMinutes() - session.getRemainingMinutes();
-		Conference deleteConference = new Conference();
+	private static void fixConference(Session session, Conference nextConference) throws Exception {
+		System.out.println("Fixing");
 
-		for (Conference conf : session.getConferences()) {
-			if (conf.getDurationInMinutes().equals(diferencia)) {
-				usedConferences.remove(conf);
-				freeConferences.add(conf);
-				deleteConference = conf;
-				deleteConference.attempt = 0;
+		nextConference.attempt = 0;
+		Conference fixConference = null;
+		long neededTime = nextConference.getDurationInMinutes();
+
+		// buscando una conferencia libre dentro de la lista que calce en tiempo
+		for (Conference freeConf : freeConferencesQueue) {
+			if (session.getRemainingMinutes() == freeConf.getDurationInMinutes()) {
+				fixConference = freeConf;
+				break;
 			}
 		}
-		session.removeConference(deleteConference);
 
-		System.out.println("NO puedo ubicar la conferencia " + nextConference.getName() + " en session "
-				+ session.getName());
-		System.out.println("Voy a mover la conferencia " + deleteConference.getName());
-		
+		if (!Objects.isNull(fixConference)) {
+			// usedConferences.add(fixConference);
+			freeConferencesQueue.remove(fixConference);
+			session.addConference(fixConference);
+		} else {
+
+			// IR A BUSCAR EN LAS OTRA SESSIONES, NO UNICMANETE EN AL PROPIA
+
+			System.out.println("");
+			System.out.println("***");
+			System.out.println("NO puedo ubicar la conferencia " + nextConference.getName() + ": "
+					+ nextConference.getDurationInMinutes() + "min, en session " + session.getName() + ": "
+					+ session.getRemainingMinutes() + "min");
+
+			conferenceRooms.forEach(c -> c.printConferenceRoom());
+			System.out.println(" ");
+			System.out.println("Free Conferences ");
+
+			for (Conference c : freeConferencesQueue) {
+				c.printConference();
+			}
+			System.out.println("***");
+
+			long diferencia = neededTime - session.getRemainingMinutes();
+			Conference deleteConference = new Conference();
+			boolean sucessChanged = false;
+
+			// QUITAR UNA QUE TENGA LA DURACION FALTANTE
+			for (Conference conf : session.getConferences()) {
+				if (conf.getDurationInMinutes().equals(diferencia)) {
+					deleteConference = conf;
+					deleteConference.attempt = 0;
+					sucessChanged = true;
+					break;
+				}
+			}
+
+			// QUITAR UNA QUE SU DURACION + LO FALTANTE SEA IGUAL A LA DURACION QUE NECESITO
+			// UBICAR
+			if (!sucessChanged) {
+				for (Conference conf : session.getConferences()) {
+					if (conf.getDurationInMinutes().equals(nextConference.getDurationInMinutes() + diferencia)) {
+						deleteConference = conf;
+						deleteConference.attempt = 0;
+						sucessChanged = true;
+						break;
+					}
+				}
+			}
+
+			// SI ENCONTRE UNA COINCIDENCIA BORRAR
+			if (sucessChanged) {
+				session.removeConference(deleteConference);
+				freeConferencesQueue.add(deleteConference);
+				System.out.println("Voy a mover la conferencia " + deleteConference.getName());
+			} else {
+				System.out.println("No tengo nada que mover");
+			}
+
+			
+			
+			// BUSCAR EN OTRAS SESSIONES POR COINCIDENCIAS
+			if (!sucessChanged) {
+				long totalTime = 0;
+				Session sessionForChangeSchedule = null;
+				List<Conference> removeConferences = new ArrayList<>();
+				rooms: for (ConferenceRoom room : conferenceRooms) {
+
+					for (Session ses : room.getSessions()) {
+						totalTime = 0;
+						removeConferences = new ArrayList<>();
+						
+						if (ses.getName().equals(session.getName())) {
+							continue;
+						}
+
+						ses.getConferences().sort(new Comparator<Conference>() {
+							
+							@Override
+							public int compare(Conference c1, Conference c2) {
+								return c1.getDurationInMinutes().compareTo(c2.getDurationInMinutes()); 
+							}
+						});
+						
+						
+						for (Conference co : ses.getConferences()) {
+							
+							if (co.getDurationInMinutes() < neededTime) {
+								totalTime += co.getDurationInMinutes();
+								removeConferences.add(co);
+							}
+
+							if (totalTime == neededTime) {
+								sessionForChangeSchedule = ses;
+								break rooms;
+							}
+						}
+
+					}
+				}
+
+				if (!Objects.isNull(sessionForChangeSchedule)) {
+					for (Conference conf : removeConferences) {
+						sessionForChangeSchedule.removeConference(conf);
+						freeConferencesQueue.add(conf);
+					}
+					sessionForChangeSchedule.addConference(nextConference);
+					freeConferencesQueue.remove(nextConference);
+				}
+			}
+
+			// BORRAR UNA MAS GRANDE EN CASO DE NO HABE UNA COINCIDENCIA EXACTA
+			// if (Objects.isNull(deleteConference.getName())) {
+			// for (Conference conf : session.getConferences()) {
+			// if (conf.getDurationInMinutes() > diferencia) {
+			// deleteConference = conf;
+			// deleteConference.attempt = 0;
+			// break;
+			// }
+			// }
+			// }
+
+		}
+
 	}
-	
-	
-	
+
 	private static void dummyConference() {
 
 		// put conference inside rooms
@@ -129,7 +263,7 @@ public class Main {
 		item.setName("Conferencia uno");
 		item.setDuration(Duration.ofMinutes(30));
 		inputConferences.add(item);
-		
+
 		item = new Conference();
 		item.setName("Conferencia tres");
 		item.setDuration(Duration.ofMinutes(30));
@@ -147,12 +281,12 @@ public class Main {
 
 		item = new Conference();
 		item.setName("Conferencia cinco");
-		item.setDuration(Duration.ofMinutes(45));
+		item.setDuration(Duration.ofMinutes(60));
 		inputConferences.add(item);
 
 		item = new Conference();
 		item.setName("Conferencia seis");
-		item.setDuration(Duration.ofMinutes(30));
+		item.setDuration(Duration.ofMinutes(45));
 		inputConferences.add(item);
 
 		item = new Conference();
@@ -162,12 +296,12 @@ public class Main {
 
 		item = new Conference();
 		item.setName("Conferencia ocho");
-		item.setDuration(Duration.ofMinutes(30));
+		item.setDuration(Duration.ofMinutes(45));
 		inputConferences.add(item);
 
 		item = new Conference();
 		item.setName("Conferencia nueve");
-		item.setDuration(Duration.ofMinutes(45));
+		item.setDuration(Duration.ofMinutes(30));
 		inputConferences.add(item);
 
 		item = new Conference();
@@ -215,21 +349,21 @@ public class Main {
 		item.setDuration(Duration.ofMinutes(30));
 		inputConferences.add(item);
 
-		item = new Conference();
-		item.setName("Conferencia 19");
-		item.setDuration(Duration.ofMinutes(60));
-		inputConferences.add(item);
+//		item = new Conference();
+//		item.setName("Conferencia 19");
+//		item.setDuration(Duration.ofMinutes(60));
+//		inputConferences.add(item);
 
 		item = new Conference();
 		item.setName("Conferencia 20");
 		item.setDuration(Duration.ofMinutes(30));
 		inputConferences.add(item);
 
-		item = new Conference();
-		item.setName("Conferencia 21");
-		item.setDuration(Duration.ofMinutes(30));
-		inputConferences.add(item);
-
+//		item = new Conference();
+//		item.setName("Conferencia 21");
+//		item.setDuration(Duration.ofMinutes(30));
+//		inputConferences.add(item);
+//
 //		item = new Conference();
 //		item.setName("Conferencia 22");
 //		item.setDuration(Duration.ofMinutes(30));
